--- a/istio-hands-on/myapp/client/views/index.ejs
+++ b/istio-hands-on/myapp/client/views/index.ejs
@@ -35,9 +35,17 @@
               <th scope="col">Mission</th>
             </tr>
           </thead>
-	  <tbody> </tbody>
+          <tbody> 
+                <% for(var i=0; i < data.length; i++) { %>
+                  <tr>
+                      <td><%= data[i].id %></td>
+                      <td><%= data[i].name %></td>
+		      <td><%= data[i].surname %></td>
+		      <td><%= data[i].mission %></td>
+                  </tr>
+               <% } %>
+	  </tbody>
       </table>
-      
-      <script src="main.js" defer></script>
 </body>
 </html>
+
